Fix test Instant references